--- a/RELEASE_NOTES.JA
+++ b/RELEASE_NOTES.JA
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.25 2013/04/17 03:08:42 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.26 2013/04/26 05:47:47 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -24,6 +24,13 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
+2.7.10p1/2.7.0	2013/05/01
+
+  細かな改善点:
+    * SMS, MMSゲートウェイ等の携帯電話用ドメインをアップデート
+
+
+-----------------------------------------------------------------------
 2.7.10/2.7.0	2013/04/19
 
   新機能:
