--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.26 2013/04/17 03:08:42 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.27 2013/04/26 05:47:47 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -28,6 +28,13 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
+2.7.10p1/2.7.0	2013/05/01
+
+  Assorted improvements and code cleanup:
+    * Update cellular phone domains, such as SMS or MMS gateways.
+
+
+-----------------------------------------------------------------------
 2.7.10/2.7.0	2013/04/19
 
   New functionality:
