--- a/RELEASE_NOTES.JA
+++ b/RELEASE_NOTES.JA
@@ -24,10 +24,21 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
-2.7.10p1/2.7.0	2013/05/01
+2.7.10p1/2.7.0	2013/05/26
 
   細かな改善点:
     * SMS, MMSゲートウェイ等の携帯電話用ドメインをアップデート
+
+    * DNS関係のエラーで Gmailから返ってくるバウンスメールを解析出来るよ
+      うになりました。
+
+  修正されたバグ:
+    * DBD::SQLiteモジュールが@INCに入っていない場合、次のテストにおいて
+      make testが失敗するバグを修正。t/024_statistics-stored-bddr.t.
+      Thanks to Tateyama.
+
+    * Kanadzuchi::Timeが"25 May 2013 1:2"のようなDateヘッダを解析出来な
+      い問題を修正しました。
 
 
 -----------------------------------------------------------------------
