--- a/RELEASE_NOTES.JA
+++ b/RELEASE_NOTES.JA
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.27 2013/06/20 11:56:49 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.28 2013/07/17 04:24:49 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -24,7 +24,7 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
-2.7.10p2/2.7.0	2013/06/20
+2.7.10p3/2.7.0	2013/07/18
 
   細かな改善点:
     * SMS, MMSゲートウェイ等の携帯電話用ドメインをアップデート
@@ -35,6 +35,7 @@
       うになりました。解析モジュールはPull request #3のMTA::US::Vtextを
       基準に作成したMTA::US::Verizonを使用します。
       Thanks to Scott Gifford.
+    * Kanadzuchi/Mail/Why以下のエラーメッセージパターンを追加更新。
 
   修正されたバグ:
     * DBD::SQLiteモジュールが@INCに入っていない場合、次のテストにおいて
@@ -45,6 +46,7 @@
   
   新しいファイル:
     * lib/Kanadzuchi/MTA/US/Verizon.pm
+    * lib/Kanadzuchi/Mail/Why/Suspend.pm
     * t/043_mta-us-verizon.t
 
 -----------------------------------------------------------------------
