--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.30 2013/07/17 04:24:49 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.31 2013/08/31 00:02:24 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -11,7 +11,7 @@
 
                    BOUNCEHAMMER/RELEASE_NOTES
 -----------------------------------------------------------------------
- Copyright (C) 2009-2011 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
+ Copyright (C) 2009-2013 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
  Developed by Cubicroot Co. Ltd. (http://cubicroot.jp/)
 -----------------------------------------------------------------------
  This listing show the release notes of "bounceHammer",  an open source
@@ -28,7 +28,7 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
-2.7.10p3/2.7.0	2013/07/18
+2.7.10p4/2.7.0	2013/09/02
 
   Assorted improvements and code cleanup:
     * Update cellular phone domains, such as SMS or MMS gateways.
@@ -40,6 +40,9 @@
       on MTA::US::Vtext at Pull request #3 from scottgifford.
       Thanks to Scott Gifford.
     * Update error message patterns in Kanadzuchi/Mail/Why.
+    * @yahoo.ne.jp is classified into provider 'yahoo',
+    * Improved precision of analysis for bounced emails from au by KDDI
+      (@ezweb.ne.jp: Japanese cellular phone provider) and Yahoo!
 
   Fixed bugs:
     * Fixed an issue that make test fails when there is no DBD::SQLite
@@ -52,6 +55,9 @@
     * lib/Kanadzuchi/MTA/US/Verizon.pm
     * lib/Kanadzuchi/Mail/Why/Suspend.pm
     * t/043_mta-us-verizon.t
+
+  Removed files:
+    * lib/Kanadzuchi/Mail/Bounced/Yahoo.pm
 
 -----------------------------------------------------------------------
 2.7.10/2.7.0	2013/04/19
