--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.31 2013/08/31 00:02:24 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.32 2013/10/21 07:00:15 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -28,9 +28,13 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
-2.7.10p4/2.7.0	2013/09/02
+2.7.11/2.7.0	2013/10/22
 
   Assorted improvements and code cleanup:
+    * Output data (json,yaml, and csv) created by mailboxparser command
+      includes the new sub fields: subject(the value of Subject header)
+      and messageid (the value of Message-Id header) in the description
+      field.
     * Update cellular phone domains, such as SMS or MMS gateways.
     * mailboxparser now can parse an bounced email from Gmail with DNS
       error.
@@ -52,8 +56,10 @@
       date format: 25 May 2013 1:2 .
 
   New files:
+    * lib/Kanadzcuhi/MIME.pm
     * lib/Kanadzuchi/MTA/US/Verizon.pm
     * lib/Kanadzuchi/Mail/Why/Suspend.pm
+    * t/027_mime.t
     * t/043_mta-us-verizon.t
 
   Removed files:
