Update RELEASE_NOTES in each language

--- a/RELEASE_NOTES.JA
+++ b/RELEASE_NOTES.JA
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.30 2013/10/21 07:00:15 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.31 2014/02/23 12:51:46 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -9,7 +9,7 @@
                                                                                     
               BOUNCEHAMMER/RELEASE_NOTES.JA (utf-8/LF)
 -----------------------------------------------------------------------
- Copyright (C) 2009-2013 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
+ Copyright (C) 2009-2014 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
  開発: 株式会社キュービックルート (http://cubicroot.jp/)
 -----------------------------------------------------------------------
  オープンソースのバウンスメール解析システム``bounceHammer''のリリース
@@ -24,6 +24,16 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
+2.7.11p1/2.7.0  2014/02/23
+
+  修正されたバグ:
+    * Issue #5 メール解析時の警告: "Use of uninitialized value ..." に
+      関するバグを修正。Thanks to hiroyuki-sato.
+    * Issue #7 $LANG環境変数が"C"以外の時に"make test"が失敗する問題を
+      修正しました。Thanks to @LIMAddict.
+    * Kanadzuchi::RFC3463のgetdsn()メソッドの小さなバグを修正。
+
+-----------------------------------------------------------------------
 2.7.11/2.7.0	2013/10/22
 
   細かな改善点:
