--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.32 2013/10/21 07:00:15 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.33 2014/02/23 12:51:46 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -11,7 +11,7 @@
 
                    BOUNCEHAMMER/RELEASE_NOTES
 -----------------------------------------------------------------------
- Copyright (C) 2009-2013 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
+ Copyright (C) 2009-2014 Cubicroot Co. Ltd. ALL RIGHTS RESERVED.
  Developed by Cubicroot Co. Ltd. (http://cubicroot.jp/)
 -----------------------------------------------------------------------
  This listing show the release notes of "bounceHammer",  an open source
@@ -28,6 +28,17 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
+2.7.11p1/2.7.0	2014/02/23
+
+  Fixed bugs:
+    * Fixed issue #5, warning message: "Use of uninitialized value ..."
+      is displayed when parsing bounce mails by mailboxparser command.
+      Thanks to hiroyuki-sato.
+    * Fixed issue #7, "make test" fails when the value of LANG environ-
+      ment variable is not "C". Thanks to @LIMAddict.
+    * Fixed getdsn() method of Kanadzuchi::RFC3463.
+
+-----------------------------------------------------------------------
 2.7.11/2.7.0	2013/10/22
 
   Assorted improvements and code cleanup:
