--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES,v 1.76.2.33 2014/02/23 12:51:46 ak Exp $
+ $Id: RELEASE_NOTES,v 1.76.2.35 2014/05/20 08:24:38 ak Exp $
  -Id: RELEASE_NOTES,v 1.12 2009/12/01 10:35:23 ak Exp -
  -Id: RELEASE_NOTES,v 1.34 2009/08/27 05:09:04 ak Exp -
 -----------------------------------------------------------------------
@@ -28,7 +28,7 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
-2.7.11p1/2.7.0	2014/02/23
+2.7.12/2.7.0	2014/05/21
 
   Fixed bugs:
     * Fixed issue #5, warning message: "Use of uninitialized value ..."
@@ -37,6 +37,10 @@
     * Fixed issue #7, "make test" fails when the value of LANG environ-
       ment variable is not "C". Thanks to @LIMAddict.
     * Fixed getdsn() method of Kanadzuchi::RFC3463.
+    * Fixed tiny bug of is_somethingelse in Kanadzuchi/Mail/Bounced.pm.
+    * Fixed code  for rewriting header name  in lib/Kanadzuchi/Mbox.pm,
+      the name of "Message-Id" header is "Message-ID" in Thunderbird.
+      Thanks to @crazyhacks68k.
 
 -----------------------------------------------------------------------
 2.7.11/2.7.0	2013/10/22
