--- a/RELEASE_NOTES.JA
+++ b/RELEASE_NOTES.JA
@@ -1,4 +1,4 @@
- $Id: RELEASE_NOTES.JA,v 1.52.2.33 2014/05/20 08:24:38 ak Exp $
+ $Id: RELEASE_NOTES.JA,v 1.52.2.34 2014/07/28 05:26:22 ak Exp $
 -----------------------------------------------------------------------
  ##                                      ##  ##                                     
  ##      ####  ##  ## #####   #### ####  ##  ##  ####  ##  ## ##  ##  ####  #####   
@@ -24,6 +24,13 @@
   - http://www.facebook.com/bouncehammer
 -----------------------------------------------------------------------
 
+2.7.12p1/2.7.0  2014/07/25
+
+  細かな改善点:
+    * Google Appsからのバウンスメールの解析精度が向上。次期bouncehammer
+      のコアモジュールであるMaikugiからの移植として実装。
+
+-----------------------------------------------------------------------
 2.7.12/2.7.0	2014/05/21
 
   修正されたバグ:
